# nengoLuigi

./: IO_ball_and_plate_servo.py  nxcore_tutorials.py  pdNengo_IO_ball_plate.py  pdNengo_IO_ball_plate_2.py  simpleIO_2.py  simpleIO_3.py  simpleIO_4.py  simpleIO_5.py  simpleIO_6.py  simpleIO_7.py  simppleIO.py  simppleIO_2.py
ros/: CMakeLists.txt  build.sh  nxcore_tutorials.py  rosIO.py  rosIOsnip.cc  runmgmt.c  test.cc  test.h
ros/nxcore/: tutorial_01_single_compartment_with_bias.py  tutorial_02_single_compartment_with_bias_connecting_to_two_others.py  tutorial_03_multiple_cores_with_bias.py  tutorial_07_population_connectivity.py
